include/rpc/typing.h

struct rpct_type;
struct rpct_member;
struct rpct_interface;
struct rpct_if_member;
typedef struct rpct_type *rpct_type_t;
typedef struct rpct_member *rpct_member_t;
typedef struct rpct_interface *rpct_interface_t;
typedef struct rpct_if_member *rpct_if_member_t;