include/rpc/object.h

struct rpc_object;
typedef enum {
	RPC_TYPE_NULL,			
	RPC_TYPE_BOOL,			
	RPC_TYPE_UINT64,		
	RPC_TYPE_INT64,			
	RPC_TYPE_DOUBLE,		
	RPC_TYPE_DATE,			
	RPC_TYPE_STRING,		
	RPC_TYPE_BINARY,		
	RPC_TYPE_FD,			
	RPC_TYPE_DICTIONARY,		
	RPC_TYPE_ARRAY,			
	RPC_TYPE_ERROR,			
#if defined(__linux__)
    	RPC_TYPE_SHMEM,			
#endif
} rpc_type_t;
typedef struct rpc_object *rpc_object_t;
typedef bool (^rpc_array_applier_t)(size_t index, rpc_object_t value);
typedef bool (^rpc_dictionary_applier_t)(const char *key, rpc_object_t value);
typedef int (^rpc_array_cmp_t)(rpc_object_t o1, rpc_object_t o2);
#define	RPC_ARRAY_APPLIER(_fn, _arg)					\
	^(size_t _index, rpc_object_t _value) {				\
                return ((bool)_fn(_arg, _index, _value));		\
        }
#define	RPC_DICTIONARY_APPLIER(_fn, _arg)				\
	^(const char *_key, rpc_object_t _value) {			\
                return ((bool)_fn(_arg, _key, _value));			\
        }
#define	RPC_ARRAY_CMP(_fn, _arg)					\
	^(rpc_object_t _o1, rpc_object_t _o2) {				\
                return ((int)_fn(_arg, _o1, _o2));			\
        }
rpc_object_t rpc_retain(rpc_object_t object);
int rpc_release_impl(rpc_object_t object);
rpc_object_t rpc_copy(rpc_object_t object);
bool rpc_equal(rpc_object_t o1, rpc_object_t o2);
size_t rpc_hash(rpc_object_t object);
char *rpc_copy_description(rpc_object_t object);
rpc_type_t rpc_get_type(rpc_object_t object);
#define	rpc_release(_object)						\
	do {								\
		if (rpc_release_impl(_object) == 0)			\
			_object = NULL;					\
	} while(0)
rpc_object_t rpc_get_last_error(void);
rpc_object_t rpc_null_create(void);
rpc_object_t rpc_bool_create(bool value);
bool rpc_bool_get_value(rpc_object_t xbool);
rpc_object_t rpc_int64_create(int64_t value);
int64_t rpc_int64_get_value(rpc_object_t xint);
rpc_object_t rpc_uint64_create(uint64_t value);
uint64_t rpc_uint64_get_value(rpc_object_t xuint);
rpc_object_t rpc_double_create(double value);
double rpc_double_get_value(rpc_object_t xdouble);
rpc_object_t rpc_date_create(int64_t interval);
rpc_object_t rpc_date_create_from_current(void);
int64_t rpc_date_get_value(rpc_object_t xdate);
rpc_object_t rpc_data_create(const void *bytes, size_t length, bool copy);
size_t rpc_data_get_length(rpc_object_t xdata);
const void *rpc_data_get_bytes_ptr(rpc_object_t xdata);
size_t rpc_data_get_bytes(rpc_object_t xdata, void *buffer, size_t off,
    size_t length);
rpc_object_t rpc_string_create(const char *string);
size_t rpc_string_get_length(rpc_object_t xstring);
const char *rpc_string_get_string_ptr(rpc_object_t xstring);
rpc_object_t rpc_fd_create(int fd);
int rpc_fd_dup(rpc_object_t xfd);
int rpc_fd_get_value(rpc_object_t xfd);
rpc_object_t rpc_array_create(void);
void rpc_array_set_value(rpc_object_t array, size_t index, rpc_object_t value);
void rpc_array_remove_index(rpc_object_t array, size_t index);
void rpc_array_append_value(rpc_object_t array, rpc_object_t value);
rpc_object_t rpc_array_get_value(rpc_object_t array, size_t index);
size_t rpc_array_get_count(rpc_object_t array);
bool rpc_array_apply(rpc_object_t array, rpc_array_applier_t applier);
rpc_object_t rpc_error_create(int code, const char *msg, rpc_object_t extra);
rpc_object_t rpc_error_create_with_stack(int code, const char *msg,
    rpc_object_t extra, rpc_object_t stack);
int rpc_error_get_code(rpc_object_t error);
const char *rpc_error_get_message(rpc_object_t error);
rpc_object_t rpc_error_get_extra(rpc_object_t error);
void rpc_error_set_extra(rpc_object_t error, rpc_object_t extra);
rpc_object_t rpc_error_get_stack(rpc_object_t error);
rpc_object_t rpc_dictionary_create(void);
void rpc_dictionary_set_value(rpc_object_t dictionary, const char *key,
    rpc_object_t value);
void rpc_dictionary_remove_key(rpc_object_t dictionary, const char *key);
rpc_object_t rpc_dictionary_get_value(rpc_object_t dictionary,
    const char *key);
size_t rpc_dictionary_get_count(rpc_object_t dictionary);
bool rpc_dictionary_apply(rpc_object_t dictionary,
    rpc_dictionary_applier_t applier);