include/rpc/service.h


struct rpc_context;
typedef struct rpc_context *rpc_context_t;
struct rpc_instance;
typedef struct rpc_instance *rpc_instance_t;
typedef rpc_object_t (^rpc_function_t)(void *cookie, rpc_object_t args);
typedef rpc_object_t (*rpc_function_f)(void *cookie, rpc_object_t args);
typedef rpc_object_t (^rpc_property_getter_t)(void *cookie);
typedef void (^rpc_property_setter_t)(void *cookie, rpc_object_t value);
#define	RPC_PROPERTY_GETTER(_fn)					\
	^(void *_cookie) {						\
		return ((rpc_object_t)_fn(_cookie));			\
	}
#define	RPC_PROPERTY_SETTER(_fn)					\
	^(void *_cookie, rpc_object_t _value) {				\
		_fn(_cookie, _value);					\
	}
enum rpc_if_member_type
{
	RPC_MEMBER_EVENT,
	RPC_MEMBER_PROPERTY,
	RPC_MEMBER_METHOD,
};
struct rpc_if_method
{
	rpc_function_t  	rm_block;
	void *			rm_arg;
};
struct rpc_if_property
{
	rpc_property_getter_t	rp_getter;
	rpc_property_setter_t	rp_setter;
	void *			rp_arg;
};
struct rpc_if_member {
	const char *		rim_name;
	enum rpc_if_member_type	rim_type;
	union {
		struct rpc_if_method rim_method;
		struct rpc_if_property rim_property;
	};
};
struct rpc_interface
{
	const char *		ri_name;
	const char *		ri_description;
	struct rpc_if_member	ri_members[];
};
rpc_context_t rpc_context_create(void);
void rpc_context_free(rpc_context_t context);
int rpc_context_register_instance(rpc_context_t context, rpc_instance_t instance);
int rpc_context_register_func(rpc_context_t context, const char *name,
    const char *descr, void *arg, rpc_function_f func);
int rpc_context_unregister_member(rpc_context_t context, const char *interface,
    const char *name);
void *rpc_function_get_arg(void *cookie);
void rpc_function_respond(void *cookie, rpc_object_t object);
void rpc_function_error(void *cookie, int code, const char *message, ...);
void rpc_function_error_ex(void *cookie, rpc_object_t exception);
int rpc_function_yield(void *cookie, rpc_object_t fragment);
void rpc_function_end(void *cookie);
rpc_instance_t rpc_instance_new(const char *fmt, ...);
void *rpc_instance_get_arg(rpc_instance_t instance);
const char *rpc_instance_get_path(rpc_instance_t instance);
int rpc_instance_register_interface(rpc_instance_t instance,
    const struct rpc_interface *iface, void *arg);
int rpc_instance_register_func(rpc_instance_t instance, const char *interface,
    const char *name, void *arg, rpc_function_f fn);
int rpc_instance_register_property(rpc_instance_t instance,
    const char *interface, const char *name, void *arg,
    rpc_property_getter_t getter, rpc_property_setter_t setter);
void *rpc_property_get_arg(void *cookie);
void rpc_property_error(void *cookie, int code, const char *fmt, ...);
void rpc_instance_free(rpc_instance_t instance);