bindings/python/librpc.pxd

#
# Copyright 2017 Two Pore Guys, Inc.
# All rights reserved
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted providing that the following conditions
# are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
# IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED.  IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY
# DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
# OR SERVICES LOSS OF USE, DATA, OR PROFITS OR BUSINESS INTERRUPTION)
# HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
# STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING
# IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.
#

from libc.stdint cimport *


ctypedef bint (*rpc_dictionary_applier_f)(void *arg, const char *key, rpc_object_t value)
ctypedef bint (*rpc_array_applier_f)(void *arg, size_t index, rpc_object_t value)
ctypedef int (*rpc_array_cmp_f)(void *arg, rpc_object_t o1, rpc_object_t o2)
ctypedef void (*rpc_binary_destructor_f)(void *buffer)
ctypedef void (*rpc_binary_destructor_arg_f)(void *arg, void *buffer)
ctypedef void (*rpc_handler_f)(void *arg, const char *path, const char *interface, const char *name, rpc_object_t args)
ctypedef void (*rpc_error_handler_f)(void *arg, rpc_error_code_t code, rpc_object_t args)
ctypedef bint (*rpc_callback_f)(void *arg, rpc_call_t call, rpc_call_status_t status)
ctypedef void (*rpc_bus_event_handler_f)(void *arg, rpc_bus_event_t, rpc_bus_node *)
ctypedef bint (*rpct_type_applier_f)(void *arg, rpct_type_t type)
ctypedef bint (*rpct_interface_applier_f)(void *arg, rpct_interface_t iface)
ctypedef bint (*rpct_member_applier_f)(void *arg, rpct_member_t member)
ctypedef bint (*rpct_if_member_applier_f)(void *arg, rpct_if_member_t if_member)
ctypedef rpc_object_t (*rpc_property_getter_f)(void *cookie)
ctypedef void (*rpc_property_setter_f)(void *cookie, rpc_object_t value)
ctypedef void (*rpc_property_handler_f)(void *cookie, rpc_object_t value)
ctypedef rpc_object_t (*rpc_query_cb_f)(void *arg, rpc_object_t object)


cdef extern from "rpc/object.h" nogil:
    ctypedef struct rpc_object_t:
        pass

    ctypedef enum rpc_error_code_t:
        RPC_INVALID_RESPONSE
        RPC_CONNECTION_TIMEOUT
        RPC_CONNECTION_CLOSED
        RPC_CALL_TIMEOUT
        RPC_SPURIOUS_RESPONSE
        RPC_LOGOUT
        RPC_OTHER

    ctypedef enum rpc_type_t:
        RPC_TYPE_NULL
        RPC_TYPE_BOOL
        RPC_TYPE_UINT64
        RPC_TYPE_INT64
        RPC_TYPE_DOUBLE
        RPC_TYPE_DATE
        RPC_TYPE_STRING
        RPC_TYPE_BINARY
        RPC_TYPE_FD
        RPC_TYPE_ERROR
        RPC_TYPE_DICTIONARY
        RPC_TYPE_ARRAY

    void *RPC_DICTIONARY_APPLIER(rpc_dictionary_applier_f fn, void *arg)
    void *RPC_ARRAY_APPLIER(rpc_array_applier_f fn, void *arg)
    void *RPC_ARRAY_CMP(rpc_array_cmp_f fn, void *arg)
    void *RPC_BINARY_DESTRUCTOR_ARG(rpc_binary_destructor_arg_f fn, void *arg)

    rpc_object_t rpc_get_last_error()

    rpc_object_t rpc_retain(rpc_object_t object)
    int rpc_release_impl(rpc_object_t object)
    rpc_object_t rpc_copy(rpc_object_t object)
    bint rpc_equal(rpc_object_t o1, rpc_object_t o2)
    size_t rpc_hash(rpc_object_t object)
    char *rpc_copy_description(rpc_object_t object)
    rpc_type_t rpc_get_type(rpc_object_t object)
    const char *rpc_get_type_name(rpc_type_t type)
    void rpc_release(rpc_object_t object)

    rpc_object_t rpc_null_create()
    rpc_object_t rpc_bool_create(bint value)
    bint rpc_bool_get_value(rpc_object_t xbool)
    rpc_object_t rpc_int64_create(int64_t value)
    int64_t rpc_int64_get_value(rpc_object_t xint)
    rpc_object_t rpc_uint64_create(uint64_t value)
    uint64_t rpc_uint64_get_value(rpc_object_t xuint)
    rpc_object_t rpc_double_create(double value)
    double rpc_double_get_value(rpc_object_t xdouble)
    rpc_object_t rpc_date_create(int64_t interval)
    rpc_object_t rpc_date_create_from_current()
    int64_t rpc_date_get_value(rpc_object_t xdate)
    rpc_object_t rpc_data_create(const void *bytes, size_t length, void *destructor)
    size_t rpc_data_get_length(rpc_object_t xdata)
    const void *rpc_data_get_bytes_ptr(rpc_object_t xdata)
    size_t rpc_data_get_bytes(rpc_object_t xdata, void *buffer, size_t off,
        size_t length)
    rpc_object_t rpc_string_create(const char *string)
    size_t rpc_string_get_length(rpc_object_t xstring)
    const char *rpc_string_get_string_ptr(rpc_object_t xstring)
    rpc_object_t rpc_fd_create(int fd)
    int rpc_fd_dup(rpc_object_t xfd)
    int rpc_fd_get_value(rpc_object_t xfd)

    rpc_object_t rpc_error_create(int code, const char *msg, rpc_object_t extra)
    rpc_object_t rpc_error_create_with_stack(int code, const char *msg, rpc_object_t extra, rpc_object_t stack)
    int rpc_error_get_code(rpc_object_t error)
    const char *rpc_error_get_message(rpc_object_t error)
    rpc_object_t rpc_error_get_extra(rpc_object_t error)
    void rpc_error_set_extra(rpc_object_t error, rpc_object_t extra)
    rpc_object_t rpc_error_get_stack(rpc_object_t error)

    bint rpc_equal(rpc_object_t o1, rpc_object_t o2)
    char *rpc_copy_description(rpc_object_t object)

    rpc_object_t rpc_array_create()
    void rpc_array_set_value(rpc_object_t array, size_t index, rpc_object_t value)
    bint rpc_array_apply(rpc_object_t array, void *applier)
    void rpc_array_append_value(rpc_object_t array, rpc_object_t value)
    rpc_object_t rpc_array_get_value(rpc_object_t array, size_t index)
    size_t rpc_array_get_count(rpc_object_t array)
    void rpc_array_remove_index(rpc_object_t array, size_t index)
    void rpc_array_remove_all(rpc_object_t array)

    rpc_object_t rpc_dictionary_create()
    rpc_object_t rpc_dictionary_get_value(rpc_object_t dictionary,
        const char *key)
    void rpc_dictionary_set_value(rpc_object_t dictionary, const char *key,
        rpc_object_t value)
    bint rpc_dictionary_apply(rpc_object_t dictionary, void *applier)
    size_t rpc_dictionary_get_count(rpc_object_t dictionary)
    void rpc_dictionary_remove_key(rpc_object_t dictionary, const char *key)
    void rpc_dictionary_remove_all(rpc_object_t dictionary)


cdef extern from "rpc/connection.h" nogil:
    ctypedef enum rpc_call_status_t:
        RPC_CALL_IN_PROGRESS
        RPC_CALL_STREAM_START
        RPC_CALL_MORE_AVAILABLE
        RPC_CALL_DONE
        RPC_CALL_ERROR
        RPC_CALL_ABORTED
        RPC_CALL_ENDED

    ctypedef struct rpc_connection_t:
        pass

    ctypedef struct rpc_call_t:
        pass

    void *RPC_HANDLER(rpc_handler_f fn, void *arg)
    void *RPC_ERROR_HANDLER(rpc_error_handler_f fn, void *arg)
    void *RPC_CALLBACK(rpc_callback_f fn, void *arg)
    void *RPC_PROPERTY_HANDLER(rpc_property_handler_f fn, void *arg)

    rpc_connection_t rpc_connection_create(void *cookie, rpc_object_t params)
    int rpc_connection_close(rpc_connection_t conn)
    rpc_context_t rpc_connection_get_context(rpc_connection_t conn)
    int rpc_connection_set_context(rpc_connection_t conn, rpc_context_t ctx)
    int rpc_connection_subscribe_event(rpc_connection_t conn, const char *name)
    int rpc_connection_unsubscribe_event(rpc_connection_t conn, const char *name)
    rpc_object_t rpc_connection_call_sync(rpc_connection_t conn,
        const char *path, const char *interface, const char *method, ...)
    rpc_call_t rpc_connection_call(rpc_connection_t conn, const char *path,
        const char *interface, const char *name, rpc_object_t args, void *callback)
    int rpc_connection_send_event(rpc_connection_t conn, const char *path,
        const char *interface, const char *name, rpc_object_t args)
    void rpc_connection_set_event_handler(rpc_connection_t conn, void *handler)
    void rpc_connection_set_error_handler(rpc_connection_t conn, void *handler)
    rpc_call_status_t rpc_call_status(rpc_call_t call)
    int rpc_call_wait(rpc_call_t call)
    int rpc_call_continue(rpc_call_t call, bint sync)
    int rpc_call_abort(rpc_call_t call)
    int rpc_call_success(rpc_call_t call)
    rpc_object_t rpc_call_result(rpc_call_t call)
    void rpc_call_free(rpc_call_t call)

    void *rpc_connection_register_event_handler(rpc_connection_t conn, const char *path,
        const char *interface, const char *name, void *handler)
    void *rpc_connection_watch_property(rpc_connection_t conn,
        const char *path, const char *interface, const char *property,
        void *handler)
    void rpc_connection_unregister_event_handler(rpc_connection_t conn,
        void *cookie)


cdef extern from "rpc/service.h" nogil:
    ctypedef rpc_object_t (*rpc_function_f)(void *cookie, rpc_object_t args)

    void *RPC_PROPERTY_GETTER(rpc_property_getter_f getter)
    void *RPC_PROPERTY_SETTER(rpc_property_setter_f setter)

    cdef struct rpc_if_member:
        const char *rim_name

    cdef enum rpc_if_member_type:
        RPC_MEMBER_EVENT
        RPC_MEMBER_PROPERTY
        RPC_MEMBER_METHOD

    ctypedef struct rpc_context_t:
        pass

    ctypedef struct rpc_instance_t:
        pass

    rpc_context_t rpc_context_create()
    void rpc_context_free(rpc_context_t context)
    int rpc_context_register_instance(rpc_context_t context, rpc_instance_t instance)
    int rpc_context_register_func(rpc_context_t context, const char *interface,
        const char *name, void *arg, rpc_function_f func)
    int rpc_context_unregister_member(rpc_context_t context, const char *interface, const char *name)

    void *rpc_function_get_arg(void *cookie)
    void rpc_function_respond(void *cookie, rpc_object_t object)
    void rpc_function_error(void *cookie, int code, const char *message, ...)
    void rpc_function_error_ex(void *cookie, rpc_object_t exception)
    int rpc_function_start_stream(void *cookie)
    int rpc_function_yield(void *cookie, rpc_object_t fragment)
    void rpc_function_produce(void *cookie, rpc_object_t fragment)
    void rpc_function_end(void *cookie)

    void *rpc_property_get_arg(void *cookie)
    void rpc_property_error(void *cookie, int code, const char *fmt)

    rpc_instance_t rpc_instance_new(void *arg, const char *path)
    void rpc_instance_set_description(rpc_instance_t instance, const char *description)
    void *rpc_instance_get_arg(rpc_instance_t instance)
    const char *rpc_instance_get_path(rpc_instance_t instance)
    int rpc_instance_register_interface(rpc_instance_t instance, const char *interface, rpc_if_member *vtable, void *arg)
    int rpc_instance_register_method(rpc_instance_t instance, const char *interface,
        const char *name, void *arg, void *fn)
    int rpc_instance_register_func(rpc_instance_t instance, const char *interface,
        const char *name, void *arg, rpc_function_f fn)
    int rpc_instance_register_property(rpc_instance_t instance, const char *interface, const char *name,
        void *arg, void *getter, void *setter)
    void rpc_instance_property_changed(rpc_instance_t instance,
        const char *interface, const char *name, rpc_object_t value)
    void rpc_instance_free(rpc_instance_t instance)

    int rpc_instance_register(rpc_context_t context, rpc_instance_t instance)
    int rpc_instance_unregister(const char *path)


cdef extern from "rpc/client.h" nogil:
    ctypedef struct rpc_client_t:
        pass
